fix: change dw-icon-button version.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@dreamworld/dw-button": "^1.0.3",
     "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/dw-form": "^1.0.1",
-    "@dreamworld/dw-icon-button": "^1.0.0",
+    "@dreamworld/dw-icon-button": "add-hover-style",
     "@dreamworld/dw-input": "^1.0.0",
     "@dreamworld/material-styles": "^1.1.0",
     "lit-element": "^2.2.0",
