--- a/package.json
+++ b/package.json
@@ -18,13 +18,26 @@
   "homepage": "https://github.com/DreamworldSolutions/dw-multi-value-field#readme",
   "dependencies": {
     "@dreamworld/dw-button": "^1.0.3",
-    "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/dw-form": "^1.0.1",
     "@dreamworld/dw-icon-button": "add-hover-style",
-    "@dreamworld/dw-input": "^1.0.1-auto-formatting.8", 
+    "@dreamworld/dw-input": "^1.0.1-auto-formatting.8",
+    "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/material-styles": "^1.1.0",
     "lit-element": "^2.2.0",
     "lodash-es": "^4.17.11"
+  },
+  "resolutions": {
+    "@material/mwc-base": "0.7.0",
+    "@material/mwc-ripple": "0.7.1",
+    "@material/feature-targeting": "3.1.0",
+    "@material/ripple": "3.2.0",
+    "@material/rtl": "3.2.0",
+    "@material/shape": "3.1.0",
+    "@material/typography": "3.1.0",
+    "@material/animation": "3.1.0",
+    "@material/theme": "3.1.0",
+    "@material/base": "3.1.0",
+    "@material/dom": "3.1.0"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
