--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@material/animation": "3.1.0",
     "@material/theme": "3.1.0",
     "@material/base": "3.1.0",
-    "@material/dom": "3.1.0"
+    "@material/dom": "3.1.0",
+    "@semantic-release/npm": "5.2.0-beta.5"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "semantic-release": "beta"
+    "semantic-release": "16.0.0-beta.23"
   },
   "publishConfig": {
     "access": "public"
