--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "@dreamworld/dw-button": "^1.0.3",
     "@dreamworld/dw-form": "^1.0.1",
-    "@dreamworld/dw-icon-button": "add-hover-style",
-    "@dreamworld/dw-input": "^1.0.1-auto-formatting.8",
+    "@dreamworld/dw-icon-button": "1.1.1", 
+    "@dreamworld/dw-input": "^1.0.2",
     "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/material-styles": "^1.1.0",
     "lit-element": "^2.2.0",
@@ -38,7 +38,8 @@
     "@material/theme": "3.1.0",
     "@material/base": "3.1.0",
     "@material/dom": "3.1.0",
-    "@semantic-release/npm": "5.2.0-beta.5"
+    "@semantic-release/npm": "5.2.0-beta.5",
+    "@dreamworld/dw-icon-button": "1.1.1"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
