use fixed version

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/DreamworldSolutions/dw-multi-value-field#readme",
   "dependencies": {
-    "@dreamworld/dw-button": "update-mwc",
-    "@dreamworld/dw-form": "update-mwc",
-    "@dreamworld/dw-icon-button": "update-mwc",
-    "@dreamworld/dw-input": "update-mwc",
+    "@dreamworld/dw-button": "^2.1.0",
+    "@dreamworld/dw-form": "^2.1.0",
+    "@dreamworld/dw-icon-button": "^2.1.0",
+    "@dreamworld/dw-input": "^2.1.0",
     "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/material-styles": "^1.1.0",
     "@dreamworld/pwa-helpers": "^1.8.0",
