--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/DreamworldSolutions/dw-multi-value-field#readme",
   "dependencies": {
-    "@dreamworld/dw-button": "^2.1.0",
-    "@dreamworld/dw-form": "^2.1.0",
-    "@dreamworld/dw-icon-button": "^2.1.0",
-    "@dreamworld/dw-input": "^2.1.0",
+    "@dreamworld/dw-button": "^2.2.0-upgrade-version.1",
+    "@dreamworld/dw-form": "^2.3.0-development.2",
+    "@dreamworld/dw-icon-button": "^2.2.0-upgrade-version.2",
+    "@dreamworld/dw-input": "^2.2.0-upgrade-version.2",
     "@dreamworld/flex-layout": "^1.0.0",
     "@dreamworld/material-styles": "^1.1.0",
     "@dreamworld/pwa-helpers": "^1.8.0",
